--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <p>user</p>
-    <button id="start">start</button>
+    <button onclick="playRoundOne()">button 1</button>
+    <button onclick="playRoundTwo()">button 2</button>
+    <button onclick="playRoundThree()">button 3</button>
+    <!-- <button id="start">start</button> -->
     <!-- <select id="items" autocomplete="off">
         <option value="value" selected disabled hidden>Select one item</option>
         <option value="rock">rock</option>
