--- a/index.html
+++ b/index.html
@@ -4,12 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock,Paper,Scissors</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <p>user</p>
-    <button onclick="playRoundOne()">button 1</button>
-    <button onclick="playRoundTwo()">button 2</button>
-    <button onclick="playRoundThree()">button 3</button>
+<body class="container bg-blue-300 text-center flex flex-col items-center justify-center h-screen">
+    <div>
+        <span class="inline-flex -space-x-px overflow-hidden rounded-md border bg-white shadow-sm">
+            <button value="rock" onclick="play(value)" class="inline-block px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:relative">
+                rock
+            </button>
+
+            <button value="paper" onclick="play(value)" class="inline-block px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:relative">
+                paper
+            </button>
+
+            <button  value="scissor" onclick="play(value)" class="inline-block px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:relative">
+                scissor
+            </button>
+        </span>
+    </div>
+
+    <!-- <button value="rock" onclick="play(value)">rock</button>
+    <button value="paper" onclick="play(value)">paper</button>
+    <button value="scissor" onclick="play(value)">scissor</button> -->
+
+    <div class="overflow-x-auto mt-10">
+        <table class="min-w-full divide-y-2 divide-gray-200 bg-white text-sm">
+            <thead class="ltr:text-left rtl:text-right">
+                <tr>
+                    <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
+                        user
+                    </th>
+                    <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">
+                        pc
+                    </th>
+                </tr>
+            </thead>
+
+            <tbody class="divide-y divide-gray-200">
+                <tr>
+                    <td id="user" class="whitespace-nowrap px-4 py-2 text-gray-900">0</td>
+                    <td id="pc" class="whitespace-nowrap px-4 py-2 text-gray-700">0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- <div style="display: flex;">
+        <div>
+            <p>user win</p>
+            <p id="user">0</p>
+        </div>
+        <div style="padding-left: 20px;">
+            <p >pc win</p>
+            <p id="pc">0</p>
+        </div>
+    </div> -->
+
+    <span class="mt-5 inline-flex -space-x-px overflow-hidden rounded-md border bg-white shadow-sm">
+        <button onclick="rest()" class="inline-block px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:relative">rest</button>
+    </span>
     <!-- <button id="start">start</button> -->
     <!-- <select id="items" autocomplete="off">
         <option value="value" selected disabled hidden>Select one item</option>
